--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-company-payment/check-company-payment.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-company-payment/check-company-payment.component.html
@@ -1,3 +1,141 @@
-<p>
-  check-company-payment works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ตรวจสอบสถิติการชำระภาษี</h2>
+
+    <div class="ui top attached center aligned header">
+      <span>สถิติการชำระภาษี</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="four wide field"></div>
+          <div class="eight wide field">
+            <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
+            <select name="selectZone" id="selectZone" class="ui dropdown">
+              <option *ngFor="let item of zoneList; index as i;" value="{{i+1}}">{{item.value}}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="four wide field"></div>
+          <div class="eight wide field">
+            <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
+            <select name="selectArea" id="selectArea" class="ui dropdown">
+              <option *ngFor="let item of areaList; index as i;" value="{{i+1}}">{{item.value}}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="four wide field"></div>
+          <div class="eight wide field">
+            <label class="custom-label-w-25">สำนัักงานสรรพสามิตพื้นที่สาขา</label>
+            <select name="selectSubArea" id="selectSubArea" class="ui dropdown">
+              <option *ngFor="let item of subAreaList; index as i;" value="{{i+1}}">{{item.value}}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="four wide field"></div>
+          <div class="eight wide field">
+            <label class="custom-label-w-25">ผู้ประกอบการ</label>
+            <select name="selectCompany" id="selectCompany" class="ui dropdown">
+              <option *ngFor="let item of companyList; index as i;" value="{{i+1}}">{{item.value}}</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="four wide field"></div>
+          <div class="nine wide field">
+            <label class="custom-label-w-20" style="margin-right: 5%;">วันที่</label>
+            <div class="seven wide field">
+              <div class="ui icon input">
+                <input type="text" placeholder="MM/YYYY" value="09/2560">
+                <i class="add to calendar icon"></i>
+              </div>
+            </div>
+            <div class="eight wide field">
+              <label>ถึง</label>
+              <div class="ui icon input">
+                <input type="text" placeholder="MM/YYYY" value="10/2560">
+                <i class="add to calendar icon"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="ui center aligned grid">
+        <div class="eight wide column">
+          <button class="ui primary button" style="width: 130px;" (click)="onClickShowChart()">
+            <i class="search icon"></i>
+            ค้นหา
+          </button>
+          <button class="ui button" style="width: 130px;" (click)="clearData()">
+            <i class="refresh icon"></i>
+            ล้างข้อมูล
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui segment">
+      <div style="overflow-x: scroll; white-space:nowrap;">
+        <table id="table1" class="ui small celled table">
+          <thead>
+            <tr style="text-align: center;">
+              <th>ผู้ประกอบการ</th>
+              <th colspan="2">ตุลาคม</th>
+              <th colspan="2">พฤศจิกายน</th>
+              <th colspan="2">ธันวาคม</th>
+              <th colspan="2">มกราคม</th>
+              <th colspan="2">กุมพาพันธ์</th>
+              <th colspan="2">มีนาคม</th>
+              <th colspan="2">เมษายน</th>
+              <th colspan="2">พฤษภาคม</th>
+              <th colspan="2">มิถุนายน</th>
+              <th colspan="2">กรกฎาคม</th>
+              <th colspan="2">สิงหาคม</th>
+              <th colspan="2">กันยายน</th>
+            </tr>
+            <tr style="text-align: center;">
+              <th></th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+              <th>วันที่ชำระ</th>
+              <th>ยอดภาษี</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+    </div>
+
+    <div class="ui segment" *ngIf="showChart">
+      <img src="assets/images/chart-check-company-payment.JPG" style="width: 100%;">
+    </div>
+  </div>
+</div>
