--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-reprint-license/check-reprint-license.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-reprint-license/check-reprint-license.component.html
@@ -71,11 +71,11 @@
 
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui primary button" style="width: 130px;" (click)="onClickShowChart()">
+          <button class="ui mini primary button" style="width: 100px;">
             <i class="search icon"></i>
             ค้นหา
           </button>
-          <button class="ui button" style="width: 130px;" (click)="clearData()">
+          <button class="ui mini button" style="width: 100px;">
             <i class="refresh icon"></i>
             ล้างข้อมูล
           </button>
