--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-tax/check-receipt-tax.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-tax/check-receipt-tax.component.html
@@ -1,3 +1,177 @@
-<p>
-  check-receipt-tax works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ภาษีสรรพสามิต และรายได้อื่นๆ</h2>
+
+    <div class="ui top attached header">
+      <span>ข้อมูลใบเสร็จรับเงิน</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field required">
+            <label class="custom-label-w-15">รหัส</label>
+            <input type="text" value="1">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field required">
+            <label class="custom-label-w-15">สินค้า/บริการ</label>
+            <select class="ui dropdown">
+              <option *ngFor="let item of productList; index as i;" value="{{i+1}}">{{item.value}}</option>
+            </select>
+          </div>
+          <div class="eight wide field required">
+            <label class="custom-label-w-15">แบบพิมพ์</label>
+            <input type="text" value="239810">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-15">พิมพ์เดือน</label>
+            <select class="ui dropdown">
+              <option *ngFor="let item of printMonthList; index as i;" value="{{i+1}}">{{item.value}}</option>
+            </select>
+          </div>
+          <div class="eight wide field required">
+            <label class="custom-label-w-15">ใบเสร็จ</label>
+            <input type="text" value="1480">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-15">วัน/เดือน/ปี</label>
+            <div class="ui icon input">
+              <input type="text" placeholder="MM/YYYY" value="07/10/60">
+              <i class="add to calendar icon"></i>
+            </div>
+          </div>
+          <div class="eight wide field required">
+            <label class="custom-label-w-15">จำนวนเงิน</label>
+            <input type="text" value="10000">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="sixteen wide column">
+          <h4 class="ui header">สสส.</h4>
+        </div>
+        <div class="inline fields">
+          <div class="four wide field required">
+            <label class="custom-label-w-10">รหัส</label>
+            <input type="text" value="1">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">แบบพิมพ์</label>
+            <input type="text" value="239811">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">ใบเสร็จ</label>
+            <input type="text" value="1481">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">จำนวนเงิน</label>
+            <input type="text" value="200">
+          </div>
+        </div>
+
+        <div class="sixteen wide column">
+          <h4 class="ui header">กกท.</h4>
+        </div>
+        <div class="inline fields">
+          <div class="four wide field required">
+            <label class="custom-label-w-10">รหัส</label>
+            <input type="text" value="3">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">แบบพิมพ์</label>
+            <input type="text" value="239813">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">ใบเสร็จ</label>
+            <input type="text" value="1482">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">จำนวนเงิน</label>
+            <input type="text" value="200">
+          </div>
+        </div>
+
+        <div class="sixteen wide column">
+          <h4 class="ui header">สสท.</h4>
+        </div>
+        <div class="inline fields">
+          <div class="four wide field required">
+            <label class="custom-label-w-10">รหัส</label>
+            <input type="text" value="4">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">แบบพิมพ์</label>
+            <input type="text" value="239815">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">ใบเสร็จ</label>
+            <input type="text" value="1483">
+          </div>
+          <div class="four wide field required">
+            <label class="custom-label-w-10">จำนวนเงิน</label>
+            <input type="text" value="150">
+          </div>
+        </div>
+        <div class="ui center aligned grid">
+          <div class="eight wide column">
+            <button class="ui mini primary button width-100">
+              <i class="search icon"></i>
+              ค้นหา
+            </button>
+            <button class="ui mini button width-100">
+              <i class="refresh icon"></i>
+              ล้างข้อมูล
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui segment">
+      <table id="table1" class="ui small celled table">
+        <thead>
+          <tr style="text-align: center;">
+            <th>ผู้ประกอบการ</th>
+            <th>รหัส</th>
+            <th>วัน/เดือน/ปี</th>
+            <th>แบบพิมพ์</th>
+            <th>ใบเสร็จ</th>
+            <th>จำนวนเงิน</th>
+            <th>10% / 98.5%</th>
+            <th>95% / 1.5%</th>
+            <th>5%</th>
+            <th>รวม</th>
+            <th>ชดเชย 0.75%</th>
+            <th>ค่าแสตมป์ 1% </th>
+            <th>นำส่ง</th>
+          </tr>
+        </thead>
+        <tfoot>
+          <tr style="text-align: right;">
+            <th style="text-align: left;" colspan="5">รวม</th>
+            <th>19184.18</th>
+            <th>2458.8</th>
+            <th>16285.95</th>
+            <th>85.08</th>
+            <th>20885.68</th>
+            <th>127.61</th>
+            <th>170.15</th>
+            <th>16717.24</th>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
+</div>
