--- a/workspace/ims-client/src/styles.css
+++ b/workspace/ims-client/src/styles.css
@@ -38,8 +38,20 @@ label.custom-label-w-20 {
     width: 20em !important;
 }
 
+label.custom-label-w-15 {
+    width: 15em !important;
+}
+
+label.custom-label-w-10 {
+    width: 10em !important;
+}
+
 .bg-row-highlight {
     background-color: rgb(240, 116, 116) !important;
+}
+
+.bg-row-orange-highlight {
+    background-color: rgb(241, 177, 125) !important;
 }
 
 td.right {
@@ -48,4 +60,8 @@ td.right {
 
 td.center {
     text-align: center !important;
+}
+
+button.width-100 {
+    width: 100px !important;
 }
