--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-reprint-license/check-reprint-license.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-reprint-license/check-reprint-license.component.html
@@ -2,14 +2,13 @@
   <div class="sixteen wide column">
     <h2 class="ui header">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</h2>
 
-    <div class="ui top attached center aligned header">
+    <div class="ui top attached header">
       <span>การพิมพ์บอนุญาตซ้ำ</span>
     </div>
 
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="four wide field"></div>
           <div class="eight wide field">
             <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
             <select name="selectZone" id="selectZone" class="ui dropdown">
@@ -19,7 +18,6 @@
         </div>
 
         <div class="inline fields">
-          <div class="four wide field"></div>
           <div class="eight wide field">
             <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
             <select name="selectArea" id="selectArea" class="ui dropdown">
@@ -29,7 +27,6 @@
         </div>
 
         <div class="inline fields">
-          <div class="four wide field"></div>
           <div class="eight wide field">
             <label class="custom-label-w-25">สำนัักงานสรรพสามิตพื้นที่สาขา</label>
             <select name="selectSubArea" id="selectSubArea" class="ui dropdown">
@@ -39,7 +36,6 @@
         </div>
 
         <div class="inline fields">
-          <div class="four wide field"></div>
           <div class="eight wide field">
             <label class="custom-label-w-25">ผู้ประกอบการ</label>
             <select name="selectCompany" id="selectCompany" class="ui dropdown">
@@ -49,7 +45,6 @@
         </div>
 
         <div class="inline fields">
-          <div class="four wide field"></div>
           <div class="nine wide field">
             <label class="custom-label-w-20" style="margin-right: 5%;">วันที่</label>
             <div class="seven wide field">
@@ -71,11 +66,11 @@
 
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button" style="width: 100px;">
+          <button class="ui mini primary button width-100">
             <i class="search icon"></i>
             ค้นหา
           </button>
-          <button class="ui mini button" style="width: 100px;">
+          <button class="ui mini button width-100">
             <i class="refresh icon"></i>
             ล้างข้อมูล
           </button>
