--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-tax/check-receipt-tax.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-tax/check-receipt-tax.component.html
@@ -127,8 +127,8 @@
         <div class="ui center aligned grid">
           <div class="eight wide column">
             <button class="ui mini primary button width-100">
-              <i class="search icon"></i>
-              ค้นหา
+              <i class="add icon"></i>
+              เพิ่ม
             </button>
             <button class="ui mini button width-100">
               <i class="refresh icon"></i>
