--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-reprint-license/check-reprint-license.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-reprint-license/check-reprint-license.component.html
@@ -3,7 +3,7 @@
     <h2 class="ui header">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</h2>
 
     <div class="ui top attached header">
-      <span>การพิมพ์บอนุญาตซ้ำ</span>
+      <span>การพิมพ์ใบอนุญาตซ้ำ</span>
     </div>
 
     <div class="ui attached segment">
