update bg table

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-license/check-receipt-license.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-license/check-receipt-license.component.html
@@ -92,7 +92,7 @@
                         <td>0.3</td>
                         <td>110</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-highlight">
                         <td>ไพ่ ป1.</td>
                         <td>ภส.04-23</td>
                         <td>ใน</td>
@@ -105,7 +105,7 @@
                         <td>3.6</td>
                         <td>1,320.00</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-highlight">
                         <td>ยส.ผลิต ยาเส้นปรุง</td>
                         <td>ภส.04-06</td>
                         <td>ใน</td>
@@ -131,7 +131,7 @@
                         <td>450</td>
                         <td>165,000.00</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-highlight">
                         <td>ยส.เพาะปลูก</td>
                         <td>ภส.08-09</td>
                         <td>นอก</td>
@@ -144,7 +144,7 @@
                         <td>0</td>
                         <td>0</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-highlight">
                         <td>ยส.ผลิต ซิกาแรต</td>
                         <td>ภส.04-06</td>
                         <td>นอก</td>
@@ -170,7 +170,7 @@
                         <td>450</td>
                         <td>165,000.00</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-orange-highlight">
                         <td>ยส.ป2.อื่น</td>
                         <td>ภส.08-17</td>
                         <td>นอก</td>
@@ -183,7 +183,7 @@
                         <td>0.3</td>
                         <td>110</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-orange-highlight">
                         <td>ยส.ใบยาแห้ง</td>
                         <td>ภส.08-11</td>
                         <td>ใน</td>
@@ -222,7 +222,7 @@
                         <td>1.5</td>
                         <td>550</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-orange-highlight">
                         <td>ไพ่นำเข้า ไม่ปลอกอากร</td>
                         <td>&nbsp;</td>
                         <td>นอก</td>
@@ -235,7 +235,7 @@
                         <td>0.9</td>
                         <td>330</td>
                     </tr>
-                    <tr>
+                    <tr class="bg-row-orange-highlight">
                         <td>ไพ่นำเข้า ปลอกอากร</td>
                         <td>&nbsp;</td>
                         <td>นอก</td>
