--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -1,1 +1,63 @@
-<p>Work!</p>
+<div class="ui grid">
+    <div class="sixteen wide column">
+        <h2 class="ui header">สร้างกระดาษทำการคัดเลือกราย</h2>
+
+        <div class="ui top attached header">
+            <span>สร้างกระดาษทำการคัดเลือกราย</span>
+        </div>
+
+        <div class="ui attached segment">
+
+
+            <div class="ui form">
+
+                <div class="inline fields">
+                    <div class="ten wide field">
+                    </div>
+                    <div class="six wide field">
+                        <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
+                        <input value="" disabled="" />
+                    </div>
+                </div>
+
+                <div class="inline fields">
+                    <div class="sixteen wide field required">
+                        <label class="custom-label-w-25">ระยะเวลาที่ตรวจสอบ</label>
+                        <div class="four ui action input">
+                            <input type="text" placeholder="MM/YYYY">
+                            <button class="ui icon button">
+                                <i class="add to calendar icon"></i>
+                            </button>
+                        </div>
+                        <div class="one">
+                                <label >&nbsp;-&nbsp;</label>
+                        </div>
+                        <div class="four ui action input">
+                            <input type="text" placeholder="MM/YYYY">
+                            <button class="ui icon button">
+                                <i class="add to calendar icon"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="eight wide field required">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="ui center aligned grid">
+                <div class="eight wide column">
+                    <button class="ui mini primary button">
+                        <i class="search icon"></i>
+                        วิเคราะห์ข้อมูลเบื้องต้น
+                    </button>
+                    <button class="ui mini button">
+                        <i class="refresh icon"></i>
+                        ล้างข้อมูล
+                    </button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
