update content summary-amount-product-trader page

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/summary-amount-product-trader/summary-amount-product-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/summary-amount-product-trader/summary-amount-product-trader.component.html
@@ -1,3 +1,349 @@
-<p>
-  summary-amount-product-trader works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">สร้างกระดาษทำการคัดเลือกราย</h2>
+
+    <div class="ui top attached header">
+      <span>สร้างกระดาษทำการคัดเลือกราย</span>
+    </div>
+
+    <div class="ui attached segment">
+
+
+      <div class="ui form">
+
+        <div class="inline fields">
+          <div class="ten wide field">
+          </div>
+          <div class="six wide field">
+            <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
+            <input value="591113-01-00001" disabled="" />
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="ten wide field">
+          </div>
+          <div class="six wide field">
+
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="thirteen wide field required">
+            <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
+            <div class="four ui action input">
+              <input type="text" placeholder="MM/YYYY" value="01/2559" disabled="">
+              <button class="ui icon button">
+                <i class="add to calendar icon"></i>
+              </button>
+            </div>
+            <div class="one">
+              <label>&nbsp;-&nbsp;</label>
+            </div>
+            <div class="four ui action input">
+              <input type="text" placeholder="MM/YYYY" value="12/2560" disabled="">
+              <button class="ui icon button">
+                <i class="add to calendar icon"></i>
+              </button>
+            </div>
+          </div>
+          <div class="eight wide field required">&nbsp;&nbsp;&nbsp;
+            <label class="custom-label-w-20">เลขที่กระดาษทำการ</label>
+            <input value="591113-02-00001" disabled="" />
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="five wide field">
+            <label style="width: 170em;">กำหนดช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
+            <input value="5" disabled="" />
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="ui segment">
+      <div class="ui grid">
+        <div class="six wide column">
+
+          <div class="ui list">
+            <div class="item">
+              <i class="folder icon"></i>
+              <div class="content">
+                <div class="header">แยกข้อมูลตามกลุ่มของการชำระภาษี</div>
+
+                <div class="list">
+                  <div class="item">
+                    <i class="folder icon"></i>
+                    <div class="content">
+                      <div class="header">ผู้ประกอบการที่ชำระภาษีครบ 24 เดือน</div>
+                      <div class="list">
+                        <div class="item hand-click">
+                          <i class="file text outline icon"></i>
+                          <div class="content">
+                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</div>
+                          </div>
+                        </div>
+                        <div class="item hand-click">
+                          <i class="file text outline icon"></i>
+                          <div class="content">
+                            <div class="header">อัตราการชำระภาษีคงที่ (+-ไม่เกินร้อยละ 5)</div>
+                          </div>
+                        </div>
+                        <div class="item hand-click">
+                          <i class="file text outline icon"></i>
+                          <div class="content">
+                            <div class="header">อัตราการชำระภาษีลดลงมากกว่าร้อยละ 5</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="list">
+                  <div class="item">
+                    <i class="folder icon"></i>
+                    <div class="content">
+                      <div class="header">ผู้ประกอบการที่ชำระภาษีไม่ครบ 24 เดือน</div>
+                      <div class="list">
+                        <div class="item hand-click">
+                          <i class="file text outline icon"></i>
+                          <div class="content">
+                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นมากกว่าร้อยละ 5</div>
+                          </div>
+                        </div>
+                        <div class="item hand-click">
+                          <i class="file text outline icon"></i>
+                          <div class="content">
+                            <div class="header">อัตราการชำระภาษีเพิ่มขึ้นไม่เกินร้อยละ 5</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="list">
+                  <div class="item">
+                    <i class="folder icon"></i>
+                    <div class="content">
+                      <div class="header">ผู้ประกอบการใหม่</div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="list">
+                  <div class="item">
+                    <i class="folder icon"></i>
+                    <div class="content">
+                      <div class="header">สรุปจำนวนตามพิกัดสินค้า</div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="list">
+                  <div class="item">
+                    <i class="folder icon"></i>
+                    <div class="content">
+                      <div class="header">รวมทุกกลุ่มข้อมูลและรวมพิกัดสินค้า</div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="list">
+                  <div class="item">
+                    <i class="folder icon"></i>
+                    <div class="content">
+                      <div class="header">
+                        <a href="javascript:;" routerLink="/create-save-message-trader">สร้างบันทึกข้อความขอส่งข้อมูล
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="ten wide column">
+          <div class="ui grid center aligned">
+            <div class="sixteen wide column">
+              สรุปจำนวนผู้ประกอบการรายเดิมตาม พ.ร.บ.ภาษีสรรพสามิต พ.ศ.2560 เพื่อใช้คัดเลือกรายตรวจสอบภาษี ทั่วประเทศ
+            </div>
+          </div>
+
+          <table class="ui small celled table center aligned">
+            <thead>
+              <tr>
+                <th rowspan="2">ประเภทสินค้า/บริการ</th>
+                <th colspan="6">จำนวนผู้ประกอบการ (ราย)</th>
+                <th rowspan="2">รวม (ราย)</th>
+              </tr>
+              <tr>
+                <th style="border-left: 1px solid rgba(34,36,38,.1);">กลุ่มที่ 1</th>
+                <th>กลุ่มที่ 2</th>
+                <th>กลุ่มที่ 3</th>
+                <th>กลุ่มที่ 4</th>
+                <th>กลุ่มที่ 5</th>
+                <th>กลุ่มที่ 6</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>น้ำมันและผลิตภัณฑ์น้ำมัน</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>-</td>
+                <td>-</td>
+                <td>6</td>
+                <td>12</td>
+              </tr>
+              <tr>
+                <td>เครื่องดื่ม</td>
+                <td>2</td>
+                <td>-</td>
+                <td>1</td>
+                <td>2</td>
+                <td>6</td>
+                <td>4</td>
+                <td>15</td>
+              </tr>
+              <tr>
+                <td>แก้วและเครื่องแก้ว</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+              </tr>
+              <tr>
+                <td>รถยนต์</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>2</td>
+                <td>3</td>
+                <td>-</td>
+                <td>5</td>
+              </tr>
+              <tr>
+                <td>ผลิตภัณฑ์เครื่องหอมและเครื่องสำอาง</td>
+                <td>3</td>
+                <td>6</td>
+                <td>2</td>
+                <td>5</td>
+                <td>12</td>
+                <td>8</td>
+                <td>36</td>
+              </tr>
+              <tr>
+                <td>พรมและสิ่งทอปูพื้น</td>
+                <td>1</td>
+                <td>-</td>
+                <td>-</td>
+                <td>1</td>
+                <td>-</td>
+                <td>-</td>
+                <td>2</td>
+              </tr>
+              <tr>
+                <td>รถจักรยานยนต์</td>
+                <td>1</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>2</td>
+                <td>-</td>
+                <td>3</td>
+              </tr>
+              <tr>
+                <td>แบตเตอรี่</td>
+                <td>1</td>
+                <td>-</td>
+                <td>1</td>
+                <td>2</td>
+                <td>1</td>
+                <td>-</td>
+                <td>5</td>
+              </tr>
+              <tr>
+                <td>ไนท์คลับและดิสโกเธค</td>
+                <td>5</td>
+                <td>8</td>
+                <td>8</td>
+                <td>1</td>
+                <td>7</td>
+                <td>6</td>
+                <td>35</td>
+              </tr>
+              <tr>
+                <td>สถานอาบน้ำหรืออบตัวและนวด</td>
+                <td>12</td>
+                <td>24</td>
+                <td>18</td>
+                <td>3</td>
+                <td>27</td>
+                <td>14</td>
+                <td>98</td>
+              </tr>
+              <tr>
+                <td>สนามแข่งม้า</td>
+                <td>-</td>
+                <td>1</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>-</td>
+                <td>1</td>
+              </tr>
+              <tr>
+                <td>สนามกอล์ฟ</td>
+                <td>6</td>
+                <td>2</td>
+                <td>7</td>
+                <td>-</td>
+                <td>1</td>
+                <td>2</td>
+                <td>18</td>
+              </tr>
+              <tr>
+                <td>รวม (ราย)</td>
+                <td>34</td>
+                <td>43</td>
+                <td>38</td>
+                <td>16</td>
+                <td>59</td>
+                <td>40</td>
+                <td>230</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="ui center aligned grid">
+            <div class="sixteen wide column">
+              <button class="ui mini primary button">
+                <i class="print icon"></i>
+                พิมพ์บันทึกข้อความพร้อมกระดาษทำการ
+              </button>
+              <button class="ui mini primary button">
+                <i class="print icon"></i>
+                พิมพ์บันทึกข้อความ
+              </button>
+              <button class="ui mini button">
+                <i class="refresh icon"></i>
+                ล้างข้อมูล
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
