--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-save-message-trader/create-save-message-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-save-message-trader/create-save-message-trader.component.html
@@ -65,7 +65,7 @@
 
     <div class="ui segment">
       <div class="ui grid">
-        <div class="seven wide column">
+        <div class="six wide column">
 
           <div class="ui list">
             <div class="item">
@@ -166,7 +166,7 @@
           </div>
         </div>
 
-        <div class="nine wide column">
+        <div class="ten wide column">
           <img src="assets/images/create-save-message.JPG" style="width: 100%;">
 
           <div class="ui center aligned grid">
