--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -1,3 +1,420 @@
-<p>
-  analyst-basic-data-trader works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">กระดาษทำการเรียบเทียบการชำระภาษี 24 เดือนของผู้ประกอบการ</h2>
+
+    <div class="ui top attached header">
+      <span>ข้อมูลการวิเคราห์รายได้ของผู้ประกอบการที่มีการชำระภาษีสรรพสามิต ประเภท น้ำมัน</span>
+    </div>
+
+    <div class="ui attached segment">
+
+      <div class="ui form">
+
+        <div class="inline fields">
+          <div class="ten wide field">
+          </div>
+          <div class="six wide field">
+            <label class="custom-label-w-25">เลขที่วิเคราะห์ข้อมูล</label>
+            <input value="591113-01-00001" readonly="" class="custom-readonly" />
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="sixteen wide field required">
+            <label class="custom-label-w-25">ระหว่างวันที่ </label>
+            <div class="four ui action input">
+              <input type="text" placeholder="MM/YYYY">
+              <button class="ui icon button">
+                <i class="add to calendar icon"></i>
+              </button>
+            </div>
+            <div class="field">
+              <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
+            </div>
+            <div class="four ui action input">
+              <input type="text" placeholder="MM/YYYY">
+              <button class="ui icon button">
+                <i class="add to calendar icon"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+    <div class="ui attached segment">
+
+      <div class="ui grid">
+        <div class="three wide column" *ngIf="showmenu">
+          <div class="ui vertical menu">
+            <div class="item">
+              <div class="header">พิกัดสินค้า</div>
+              <div class="menu">
+                <a class="item" *ngFor="let item of listMenu">-{{item}}</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="thirteen wide column">
+          <div style="overflow-x: scroll;">
+            <table class="ui small celled table">
+              <thead>
+                <tr class="center aligned">
+                  <th rowspan="2">ทะเบียนสรรพสามิต</th>
+                  <th rowspan="2">ชื่อผู้ประกอบการ</th>
+                  <th rowspan="2">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
+                  <th rowspan="2">พื้นที่</th>
+                  <th rowspan="2">ภาค</th>
+                  <th colspan="2">การชำระภาษีรวม (บาท)</th>
+                  <th rowspan="2">อัตราการเปลี่ยนแปลง</th>
+                  <th colspan="2">การชำระภาษีที่ปรับค่าแล้ว (บาท)</th>
+                  <th rowspan="2">อัตราการเปลี่ยนแปลง</th>
+                  <th rowspan="2">จำนวนเดือนที่ชำระภาษี</th>
+                </tr>
+                <tr class="center aligned">
+                  <th>2559</th>
+                  <th>2560</th>
+                  <th>2559</th>
+                  <th>2560</th>
+                </tr>
+              </thead>
+              <tbody>
+
+                <tr>
+                  <td>2533-00254-8</td>
+                  <td>บริษัท ศักดิ์ไชยสิทธิ จำกัด</td>
+                  <td>บริษัท ศักดิ์ไชยสิทธิ จำกัด</td>
+                  <td>ระยอง 1</td>
+                  <td>&nbsp;</td>
+                  <td>1,271,815.20</td>
+                  <td>452,624.40</td>
+                  <td>-64.41 </td>
+                  <td>1,271,815.20</td>
+                  <td>452,624.40</td>
+                  <td>-64.41 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-00316-6</td>
+                  <td>กรมการพลังงานทหาร</td>
+                  <td>ศูนย์พัฒนาปิโตรเลียมภาคเหนือ</td>
+                  <td>เชียงใหม่</td>
+                  <td>&nbsp;</td>
+                  <td>27,131,949.75</td>
+                  <td>27,519,280.89</td>
+                  <td> 1.43 </td>
+                  <td>27,131,949.75</td>
+                  <td>27,519,280.89</td>
+                  <td> 1.43 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-00546-3</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด (คลังสมุทรสงคราม)</td>
+                  <td>สมุทรสงคราม</td>
+                  <td>&nbsp;</td>
+                  <td>66,290,672.04</td>
+                  <td>64,611,948.61</td>
+                  <td>-2.53 </td>
+                  <td>66,290,672.04</td>
+                  <td>64,611,948.61</td>
+                  <td>-2.53 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-00793-3</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>ลำปาง</td>
+                  <td>&nbsp;</td>
+                  <td>41,545,201.20</td>
+                  <td>38,509,696.45</td>
+                  <td>-7.31 </td>
+                  <td>41,545,201.20</td>
+                  <td>38,509,696.45</td>
+                  <td>-7.31 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-00841-2</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>สุราษฎร์ธานี</td>
+                  <td>&nbsp;</td>
+                  <td>117,929,522.24</td>
+                  <td>115,058,468.77</td>
+                  <td>-2.43 </td>
+                  <td>117,929,522.24</td>
+                  <td>115,058,468.77</td>
+                  <td>-2.43 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-00876-8</td>
+                  <td>บริษัท วีระสุวรรณ จำกัด</td>
+                  <td>บริษัท วีระสุวรรณ จำกัด</td>
+                  <td>สมุทรสาคร</td>
+                  <td>&nbsp;</td>
+                  <td>7,096,337.92</td>
+                  <td>12,835,341.85</td>
+                  <td> 80.87 </td>
+                  <td>7,096,337.92</td>
+                  <td>12,835,341.85</td>
+                  <td> 80.87 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-00921-6</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>สงขลา</td>
+                  <td>&nbsp;</td>
+                  <td>68,142,686.09</td>
+                  <td>66,930,292.45</td>
+                  <td>-1.78 </td>
+                  <td>68,142,686.09</td>
+                  <td>66,930,292.45</td>
+                  <td>-1.78 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-01003-1</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>บริษัท เชลล์แห่งประเทศไทย จำกัด</td>
+                  <td>พท.2</td>
+                  <td>&nbsp;</td>
+                  <td>191,208,220.23</td>
+                  <td>241,350,255.38</td>
+                  <td> 26.22 </td>
+                  <td>191,208,220.23</td>
+                  <td>241,350,255.38</td>
+                  <td> 26.22 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-01453-8</td>
+                  <td>บริษัท เชฟรอน (ไทย) จำกัด</td>
+                  <td>คลังน้ำมันเชฟรอนสุราษฎร์ธานี</td>
+                  <td>สุราษฎร์ธานี</td>
+                  <td>&nbsp;</td>
+                  <td>55,676,979.17</td>
+                  <td>43,465,525.22</td>
+                  <td>-21.93 </td>
+                  <td>55,676,979.17</td>
+                  <td>43,465,525.22</td>
+                  <td>-21.93 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-01512-1</td>
+                  <td>บริษัท ปตท. จำกัด (มหาชน)</td>
+                  <td>โรงแยกก๊าซธรรมชาติ ระยอง</td>
+                  <td>ระยอง 1</td>
+                  <td>&nbsp;</td>
+                  <td>638,412,005.67</td>
+                  <td>855,839,400.27</td>
+                  <td> 34.06 </td>
+                  <td>638,412,005.67</td>
+                  <td>855,839,400.27</td>
+                  <td> 34.06 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2535-01581-3</td>
+                  <td>บริษัท ปตท. จำกัด (มหาชน)</td>
+                  <td>บริษัท ปตท. จำกัด</td>
+                  <td>ชลบุรี 2</td>
+                  <td>&nbsp;</td>
+                  <td>72,234,084.00</td>
+                  <td>35,272,904.85</td>
+                  <td>-51.17 </td>
+                  <td>72,234,084.00</td>
+                  <td>35,272,904.85</td>
+                  <td>-51.17 </td>
+                  <td style="background-color: red;">19</td>
+                </tr>
+                <tr>
+                  <td>2535-01784-0</td>
+                  <td>บริษัท เชฟรอน (ไทย) จำกัด</td>
+                  <td>บริษัท เชฟรอน (ไทย) จำกัด</td>
+                  <td>พท.2</td>
+                  <td>&nbsp;</td>
+                  <td>34,805,642.50</td>
+                  <td>44,624,960.59</td>
+                  <td> 28.21 </td>
+                  <td>34,805,642.50</td>
+                  <td>44,624,960.59</td>
+                  <td> 28.21 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2536-00266-0</td>
+                  <td>บริษัท ปตท. จำกัด (มหาชน)</td>
+                  <td>คลังน้ำมันภูเก็ต</td>
+                  <td>ภูเก็ต</td>
+                  <td>&nbsp;</td>
+                  <td>9,583,757.70</td>
+                  <td style="background-color: red"> - </td>
+                  <td>-100.00 </td>
+                  <td>9,583,757.70</td>
+                  <td style="background-color: red"> - </td>
+                  <td>-100.00 </td>
+                  <td style="background-color: red;">10</td>
+                </tr>
+                <tr>
+                  <td>2536-00872-7</td>
+                  <td>บริษัท ซัสโก้ จำกัด (มหาชน)</td>
+                  <td>บริษัท ซัสโก้ จำกัด (มหาชน)</td>
+                  <td>สุราษฎร์ธานี</td>
+                  <td>&nbsp;</td>
+                  <td>3,301,689.85</td>
+                  <td>6,538,281.20</td>
+                  <td> 98.03 </td>
+                  <td>3,301,689.85</td>
+                  <td>6,538,281.20</td>
+                  <td> 98.03 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2536-01014-2</td>
+                  <td>บริษัท บางจาก คอร์ปอเรชั่น จำกัด (มหาชน)</td>
+                  <td>บริษัท บางจาก คอร์ปอเรชั่น จำกัด (มหาชน)</td>
+                  <td>พท.3</td>
+                  <td>&nbsp;</td>
+                  <td>19,761,291,504.48</td>
+                  <td>26,779,197,842.21</td>
+                  <td> 35.51 </td>
+                  <td>19,761,291,504.48</td>
+                  <td>26,779,197,842.21</td>
+                  <td> 35.51 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2536-01017-3</td>
+                  <td>บริษัท ซัสโก้ จำกัด (มหาชน)</td>
+                  <td>บริษัท ซัสโก้ จำกัด (มหาชน)</td>
+                  <td>พท.1</td>
+                  <td>&nbsp;</td>
+                  <td>6,129,064.25</td>
+                  <td>4,357,835.15</td>
+                  <td>-28.90 </td>
+                  <td>6,129,064.25</td>
+                  <td>4,357,835.15</td>
+                  <td>-28.90 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2536-01889-0</td>
+                  <td>บริษัท เชฟรอน (ไทย) จำกัด</td>
+                  <td>บมจ. คลังน้ำมันบริษัท เชฟรอน (ไทย) จำกัด และบริษัท เอสโซ่ (ประเทศไทย) จำกัด</td>
+                  <td>สงขลา</td>
+                  <td>&nbsp;</td>
+                  <td>64,401,225.18</td>
+                  <td>57,606,107.95</td>
+                  <td>-10.55 </td>
+                  <td>64,401,225.18</td>
+                  <td>57,606,107.95</td>
+                  <td>-10.55 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2536-01890-4</td>
+                  <td>บริษัท เอสโซ่ (ประเทศไทย) จำกัด (มหาชน)</td>
+                  <td>บมจ.คลังน้ำมันบริษัท เชฟรอน (ไทย) จำกัด และบริษัท เอสโซ่ (ประเทศไทย) จำกัด</td>
+                  <td>สงขลา</td>
+                  <td>&nbsp;</td>
+                  <td>48,103,654.05</td>
+                  <td>40,879,407.26</td>
+                  <td>-15.02 </td>
+                  <td>48,103,654.05</td>
+                  <td>40,879,407.26</td>
+                  <td>-15.02 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>2537-00008-3</td>
+                  <td>บริษัท ปตท. จำกัด (มหาชน)</td>
+                  <td>บริษัท ปตท. จำกัด (มหาชน) คลังน้ำมันลำลูกกา</td>
+                  <td>ปทุมธานี 2</td>
+                  <td>&nbsp;</td>
+                  <td>25,432,900.05</td>
+                  <td>33,763,569.30</td>
+                  <td> 32.76 </td>
+                  <td>25,432,900.05</td>
+                  <td>33,763,569.30</td>
+                  <td> 32.76 </td>
+                  <td>24</td>
+                </tr>
+                <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>ชำระภาษีครบ 24 เดือน</td>
+                  <td>&nbsp;</td>
+                  <td>17</td>
+                  <td>ราย</td>
+                </tr>
+                <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>ชำระภาษีไม่ครบ 24 เดือน</td>
+                  <td>&nbsp;</td>
+                  <td>2</td>
+                  <td>ราย</td>
+                </tr>
+                <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>รวมผู้ประกอบการทั้งสิ้นทั้งสิ้น</td>
+                  <td>&nbsp;</td>
+                  <td>19</td>
+                  <td>ราย</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+        </div>
+      </div>
+
+
+      <div class="ui center aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button">
+            <i class="add icon"></i>
+            สร้างกระดาษทำการคัดเลือกราย
+          </button>
+          <button class="ui mini button">
+            <i class="save icon"></i>
+            บันทึกข้อมูล
+          </button>
+          <button class="ui mini button">
+            <i class="refresh icon"></i>
+            ล้างข้อมูล
+          </button>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
